select.result, select.test:   Added a test case for bug #7098. sql_select.cc:   Fixed bug #7098.   When a string field was substituted for an equal constant   the collation of the constant was changed by mistake for   the binary collation.